Edit #1: Playing around with the visuals

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeff's Website</title>
+    <title>Nicole's Website</title>
   </head>
   <body>
 
@@ -13,8 +13,8 @@
     <main>
 
       <header>
-        <h1>Jeff Delaney</h1>
-        <p>🚀 Welcome to my website!</p>
+        <h1>Nicole Low</h1>
+        <p>🚀 Welcome to my world!🙌🌍✨ </p>
       </header>
 
 
