--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </header>
 
       <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
+        <p>Software Developer building modern web applications and websites</p>
       </blockquote>
 
       <section>
@@ -55,27 +55,13 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
 
-        <h2>🏆 Accomplishments</h2>
+        <h2>Skills</h2>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <p></p>
       </section>
 
-      <blockquote>
-        <p>
-          Contact <br />The best way out is always through <br />-Robert Frost
-        </p>
-      </blockquote>
-
       <section class="left">
-        <h2>🌮 Work History</h2>
+        <h2>Connect</h2>
 
         <h3>McDonalds</h3>
         <p>
@@ -88,25 +74,6 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <h3>Burger King</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Taco Bell</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
       </section>
 
       <blockquote>
